--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -7,30 +7,30 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # GitHub ActionsランナーでUbuntuを使用
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2  # リポジトリの内容をGitHub Actionsランナーにチェックアウト
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v2  # GitHub ActionsランナーにPythonをセットアップ
+      uses: actions/setup-python@v2
       with:
         python-version: '3.x'
 
     - name: Install Ansible
       run: |
-        python -m pip install --upgrade pip  # GitHub Actionsランナーにpipをインストール/アップグレード
-        pip install ansible  # GitHub ActionsランナーにAnsibleをインストール
+        python -m pip install --upgrade pip
+        pip install ansible
 
     - name: Set up SSH
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa  # GitHub SecretsからSSH秘密鍵を配置
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
 
     - name: Run Ansible Playbook
       env:
-        ANSIBLE_HOST_KEY_CHECKING: 'false'  # SSHホストキーのチェックを無効化
+        ANSIBLE_HOST_KEY_CHECKING: 'false'
       run: |
-        ansible-playbook -i inventory playbook.yml
+        ansible-playbook -i inventory playbook.yml -vvv
